# cess

./: .dockerignore  Cargo.toml  Makefile  rust-toolchain.toml  rustfmt.toml
crates/bloom-filter/: Cargo.toml
crates/ces-allocator/: Cargo.toml
crates/ces-allocator/src/: lib.rs
crates/ces-crypto/: Cargo.toml
crates/ces-pdp/: Cargo.toml
crates/ces-pois/: Cargo.toml
crates/ces-pois/src/util/: mod.rs
crates/ces-serde-more/: Cargo.toml
crates/ces-types/: Cargo.toml
crates/ces-types/src/: attestation.rs  lib.rs
crates/cestory/: .rustfmt.toml  Cargo.toml
crates/cestory/api/: Cargo.toml  build.rs
crates/cestory/api/proto/: handover-api.proto
crates/cestory/api/src/: chain_client.rs  lib.rs
crates/cestory/pal/: Cargo.toml
crates/cestory/pal/src/: lib.rs
crates/cestory/src/: attestation.rs  handover.rs  identity_key.rs  lib.rs  master_key.rs  podr2.rs  utils.rs
crates/cestory/src/ceseal/: ready.rs  register.rs
crates/common/: Cargo.toml
crates/enclave-verify/: Cargo.toml
crates/reqwest-env-proxy/: Cargo.toml
crates/scheduler-credit/: Cargo.toml
crates/sgx-api-lite/: Cargo.toml
crates/sgx-api-lite/src/: lib.rs  sys.rs
crates/sgx-attestation/: Cargo.toml
crates/sgx-attestation/src/dcap/: verify.rs
crates/sgx-attestation/src/ias/: verify.rs
docs/: AccountGuide.md
pallets/audit/: Cargo.toml
pallets/cacher/: Cargo.toml
pallets/cacher/src/: tests.rs
pallets/cess-treasury/: Cargo.toml
pallets/evm-account-mapping/: Cargo.toml
pallets/evm-account-mapping/src/: lib.rs
pallets/file-bank/: Cargo.toml
pallets/oss/: Cargo.toml
pallets/reservoir/: Cargo.toml
pallets/scheduler-credit/: Cargo.toml
pallets/sminer/: Cargo.toml
pallets/staking/: Cargo.toml
pallets/staking/src/pallet/: mod.rs
pallets/storage-handler/: Cargo.toml
pallets/tee-worker/: Cargo.toml
pallets/tee-worker/src/: functions.rs  lib.rs
scripts/docker/: build.sh
scripts/docker/ceseal/gramine/: Dockerfile  handover.Dockerfile  start-with-handover.sh  start.sh
scripts/docker/env/: dev-container.yml  gramine-rust.Dockerfile  intel-sgx.Dockerfile  rust-chef-protoc.Dockerfile
scripts/docker/node/: Dockerfile
scripts/launch-help/: .gitignore  README.md  ces-launch.py
scripts/run/: ceseal.sh  node.sh
standalone/chain/node/: Cargo.toml
standalone/chain/node/src/: chain_spec.rs  command.rs
standalone/chain/runtime/: Cargo.toml
standalone/chain/runtime/src/: lib.rs
standalone/teeworker/ceseal/: Cargo.toml  build.rs
standalone/teeworker/ceseal/gramine-build/: Makefile  ceseal.manifest.template  gramine-sgx
standalone/teeworker/ceseal/gramine-build/conf/: sgx_default_qcnl.conf
standalone/teeworker/ceseal/src/: handover.rs  main.rs  pal_gramine.rs
standalone/teeworker/handover/: Cargo.toml
standalone/teeworker/handover/src/: main.rs
