[workspace]


members = [
    "crates/bloom-filter",    
    "crates/ces-types",
    "crates/common",
    "crates/enclave-verify",
    "crates/reqwest-env-proxy",
    "crates/rrsc-vrf-solver",
    "crates/scheduler-credit",
    "crates/sgx-attestation",
    "pallets/audit",
    "pallets/cacher",
    "pallets/cess-treasury",
    "pallets/evm-account-mapping",
    "pallets/file-bank",
    "pallets/oss",
    "pallets/reservoir",
    "pallets/scheduler-credit",
    "pallets/sminer",
    "pallets/staking",
    "pallets/storage-handler",
    "pallets/tee-worker",
    "standalone/chain/node",
    "standalone/chain/primitives",
    "standalone/chain/runtime",
]

resolver = "2"

# The list of dependencies below (which can be both direct and indirect dependencies) are crates
# that are suspected to be CPU-intensive, and that are unlikely to require debugging (as some of
# their debug info might be missing) or to require to be frequently recompiled. We compile these
# dependencies with `opt-level=3` even in "dev" mode in order to make "dev" mode more usable.
# The majority of these crates are cryptographic libraries.
#
# If you see an error mentioning "profile package spec ... did not match any packages", it
# probably concerns this list.
#
# This list is ordered alphabetically.
[profile.dev.package]
blake2 = { opt-level = 3 }
blake2b_simd = { opt-level = 3 }
chacha20poly1305 = { opt-level = 3 }
cranelift-codegen = { opt-level = 3 }
cranelift-wasm = { opt-level = 3 }
crc32fast = { opt-level = 3 }
crossbeam-deque = { opt-level = 3 }
crypto-mac = { opt-level = 3 }
curve25519-dalek = { opt-level = 3 }
ed25519-dalek = { opt-level = 3 }
futures-channel = { opt-level = 3 }
hash-db = { opt-level = 3 }
hashbrown = { opt-level = 3 }
hmac = { opt-level = 3 }
httparse = { opt-level = 3 }
integer-sqrt = { opt-level = 3 }
keccak = { opt-level = 3 }
libm = { opt-level = 3 }
librocksdb-sys = { opt-level = 3 }
libsecp256k1 = { opt-level = 3 }
libz-sys = { opt-level = 3 }
mio = { opt-level = 3 }
nalgebra = { opt-level = 3 }
num-bigint = { opt-level = 3 }
parking_lot = { opt-level = 3 }
parking_lot_core = { opt-level = 3 }
percent-encoding = { opt-level = 3 }
polkavm-linker = { opt-level = 3 }
primitive-types = { opt-level = 3 }
reed-solomon-novelpoly = { opt-level = 3 }
ring = { opt-level = 3 }
rustls = { opt-level = 3 }
sha2 = { opt-level = 3 }
sha3 = { opt-level = 3 }
smallvec = { opt-level = 3 }
snow = { opt-level = 3 }
substrate-bip39 = { opt-level = 3 }
twox-hash = { opt-level = 3 }
uint = { opt-level = 3 }
wasmi = { opt-level = 3 }
x25519-dalek = { opt-level = 3 }
yamux = { opt-level = 3 }
zeroize = { opt-level = 3 }

[profile.release]
# Substrate runtime requires unwinding.
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.testnet]
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
inherits = "release"
overflow-checks = true

[workspace.package]
authors = ["CESS LAB"]
edition = "2024"
repository = "https://github.com/CESSProject/cess"

[workspace.dependencies]
# ---- Substrate crates begin ----
#	primitives
sp-application-crypto = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-crypto-hashing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }

#	frames
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
frame-election-provider-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
frame-support-test = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6" }

#	pallets
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-beefy = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-beefy-mmr = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-transaction-storage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-bags-list = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-migrations = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false, features = [
    "historical",
] }
pallet-session-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-staking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
pallet-staking-reward-curve = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }

#   client dependencies
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6" }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6" }
substrate-test-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6" }
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-6", default-features = false }
# ---- Substrate crates end ----

# ---- Frontier crates begin ----
fp-account = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fp-evm = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fp-rpc = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fp-self-contained = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fp-dynamic-fee = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }

pallet-base-fee = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
pallet-ethereum = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
pallet-evm = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }

fc-api = { git = "https://github.com/CESSProject/frontier", branch = "stable2412" }
fc-cli = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fc-consensus = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fc-db = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fc-mapping-sync = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fc-rpc = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fc-rpc-core = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
fc-storage = { git = "https://github.com/CESSProject/frontier", branch = "stable2412", default-features = false }
# ---- Frontier crates end ----

# ---- Generic crates begin ----
anyhow = { version = "1", default-features = false }
array-bytes = "6.1"
async-trait = "0.1"
asn1_der = { version = "0.7", default-features = false }
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
byteorder = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5", features = ["derive"] }
const-oid = { version = "0.9.5", default-features = false }
der = { version = "0.7", default-features = false }
ethabi = { git = "https://github.com/CESSProject/ethabi", branch = "upgrade-ethereum-types", default-features = false }
futures = "0.3"
hex = { version = "0.4", default-features = false }
insta = "1"
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
primitive-types = { version = "0.13.1", default-features = false }
pem = { version = "3", default-features = false }
rand = "0.8.5"
rand_chacha = { version = "0.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "socks",
    "trust-dns",
] }
ring = "0.16.20"
rsa = { version = "0.8", default-features = false }
rustls-pki-types = { version = "=0.2.1", default-features = false }
parity-scale-codec = { version = "3.7.5", default-features = false }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
scale-codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
scale-info = { version = "2.11", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde-json-core = { version = "0.6", default-features = false }
static_assertions = "1.1.0"
thiserror = "1.0"
tokio = { version = "1" }
tracing = { version = "0.1", default-features = false }
urlencoding = "2"
webpki = { git = "https://github.com/rustls/webpki", version = "=0.102.0-alpha.3", package = "rustls-webpki", default-features = false, features = [
    "alloc",
    "ring",
], rev = "2ed9a4324f48c2c46ffdd7dc9d3eb315af25fce2" } # Release version no-std has bug
x509-cert = { version = "0.2.4", default-features = false }
# ---- Generic crates end ----

# ---- Cess workspace crates and pallets begin ----
ces-node-runtime = { path = "standalone/chain/runtime", package = "cess-node-runtime", default-features = false }
ces-serde-more = { path = "crates/ces-serde-more", default-features = false }
ces-types = { path = "crates/ces-types", default-features = false }
cess-node-runtime = { path = "standalone/chain/runtime", default-features = false }
chain = { path = "standalone/chain/runtime", package = "cess-node-runtime", default-features = false }
cp-bloom-filter = { path = "crates/bloom-filter", default-features = false }
cp-cess-common = { path = "crates/common", default-features = false }
cp-enclave-verify = { path = "crates/enclave-verify", default-features = false }
cp-scheduler-credit = { path = "crates/scheduler-credit", default-features = false }
node-executor = { path = "standalone/chain/executor" }
node-rpc = { path = "standalone/chain/rpc" }
pallet-audit = { path = "pallets/audit", default-features = false }
pallet-cacher = { path = "pallets/cacher", default-features = false }
pallet-cess-staking = { path = "pallets/staking", default-features = false }
pallet-cess-treasury = { path = "pallets/cess-treasury", default-features = false }
pallet-evm-account-mapping = { path = "pallets/evm-account-mapping", default-features = false }
pallet-file-bank = { path = "pallets/file-bank", default-features = false }
pallet-oss = { path = "pallets/oss", default-features = false }
pallet-reservoir = { path = "pallets/reservoir", default-features = false }
pallet-scheduler-credit = { path = "pallets/scheduler-credit", default-features = false }
pallet-sminer = { path = "pallets/sminer", default-features = false }
pallet-storage-handler = { path = "pallets/storage-handler", default-features = false }
pallet-tee-worker = { path = "pallets/tee-worker", default-features = false }
reqwest-env-proxy = { path = "crates/reqwest-env-proxy", default-features = false }
runtime = { path = "standalone/chain/runtime", package = "cess-node-runtime", default-features = false }
sgx-attestation = { path = "crates/sgx-attestation", default-features = false }
# RRSC
ces-rrsc-vrf-solver = { path = "crates/rrsc-vrf-solver", default-features = false }

cess-node-primitives = { path = "standalone/chain/primitives", default-features = false }
# ---- Cess workspace crates and pallets end ----


[patch.crates-io]
ring = { git = "https://github.com/jasl/ring-xous", branch = "better-wasm32-support" }
serde_json = { git = "https://github.com/CESSProject/serde_json", branch = "indexmap_update" }
