[package]
edition.workspace = true
name = "ceseal"
version = "0.4.1"
build = "build.rs"

# FIXME: Cargo workspace currently does not support setting the `panic` strategy for individual packages; 
# it can only be set globally. The `[profile.release] panic = "abort"` in the subpackage will be ignored 
# and a warning will be issued.
# As an SGX Enclave program, **ceseal** needs to use `panic = "abort"` for release builds due to considerations
# of small size and security. However, for now, to simplify management, this is temporarily being ignored.
#
# [profile.release]
# panic = "abort"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true, default-features = false, features = ["alloc"] }
clap = { workspace = true, features = ["derive", "cargo"] }
const-str = { workspace = true, features = ["proc"] }
config = { workspace = true, default-features = false, features = ["toml"] }
hex_fmt = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
lazy_static = { workspace = true, default-features = false }
num_cpus = { workspace = true }
parity-scale-codec = { workspace = true, default-features = false }
reqwest = { workspace = true, default-features = false, features = [
    "rustls-tls",
    "socks",
    "blocking",
    "hickory-dns",
] }
serde_json = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
urlencoding = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tower = { workspace = true, features = ["limit", "load-shed"] }
tonic = { workspace = true }
rustls-pki-types = { workspace = true, default-features = false, optional = true }
reqwest-env-proxy = { workspace = true }
cestory = { workspace = true }
cestory-api = { workspace = true, features = ["api-client"] }
cestory-pal = { workspace = true }
ces-allocator = { workspace = true }
ces-types = { workspace = true, default-features = false, features = [
    "enable_serde",
    "full_crypto",
] }
sgx-api-lite = { workspace = true }
sgx-attestation = { workspace = true, features = ["report"] }
# PODR2
threadpool = { workspace = true }

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }
